splitted all Rmd to one sentence by line

--- a/build-with-golem.Rmd
+++ b/build-with-golem.Rmd
@@ -2,13 +2,19 @@
 
 ## Package
 
-We believe that Shiny Apps are to be put into a package. Why? Because it allows them to be documented, tested, and can be installed in several environments.
+We believe that Shiny Apps are to be put into a package. 
+Why? Because it allows them to be documented, tested, and can be installed in several environments.
 
-Also, think about your last Shiny app that wasn’t in a package. It’s an `app.R`, maybe with a folder you’re sourcing and which contains functions (let’s say in a` R/` folder). Maybe you’ve written some meta information (let’s call it a `DESCRIPTION`), and some tests you’ve put in a `tests/` folder. Also, as you want to be sure to do the things right, you’ve put documentation in your functions. Do you see where I’m heading? Yes, you’ve written an R package.
+Also, think about your last Shiny app that wasn’t in a package. 
+It’s an `app.R`, maybe with a folder you’re sourcing and which contains functions (let’s say in a` R/` folder). 
+Maybe you’ve written some meta information (let’s call it a `DESCRIPTION`), and some tests you’ve put in a `tests/` folder. 
+Also, as you want to be sure to do the things right, you’ve put documentation in your functions. 
+Do you see where I’m heading? 
+Yes, you’ve written an R package.
 
 
 ## Shiny modules
 
-Shiny modules are crucial tools when it comes to building big shiny apps: they allow to collaborate, to split the work into pieces, they facilitate testing, and they allow implementation of new features to be made more easily. 
+Shiny modules are crucial tools when it comes to building large-scale shiny apps: they allow to collaborate, to split the work into pieces, they facilitate testing, and they allow implementation of new features to be made more easily. 
 
 // TO DO: develop more and link to resources
