--- a/golem.Rmd
+++ b/golem.Rmd
@@ -1,6 +1,8 @@
 # Introduction to `{golem}` {#golem}
 
-Ok, that’s a lot of things to process. Is there a tool that can help us simplify this workflow? Of course there is, and it’s called `{golem}`.
+Ok, that’s a lot of things to process. 
+Is there a tool that can help us simplify this workflow? 
+Of course there is, and it’s called `{golem}`.
 
 It can be found at https://github.com/ThinkR-open/golem
 
@@ -17,7 +19,10 @@ install.packages("golem")
 remotes::install_github("Thinkr-open/golem")
 ```
 
-`{golem}` is an R package that implements an opinionated framework for building production-ready Shiny apps. It all starts with an RStudio project, which contains a predefined setup for building your app. The idea is that with `{golem}`, you don’t have to focus on the foundation of your app, and can spend your time thinking about what you want to do, not about how to do it. It’s built on top of the working process we’ve developed at ThinkR, and tries to gather in one place the functions and tools we’ve created for building applications designed for production.
+`{golem}` is an R package that implements an opinionated framework for building production-ready Shiny apps. 
+It all starts with an RStudio project, which contains a predefined setup for building your app. 
+The idea is that with `{golem}`, you don’t have to focus on the foundation of your app, and can spend your time thinking about what you want to do, not about how to do it. 
+It’s built on top of the working process we’ve developed at ThinkR, and tries to gather in one place the functions and tools we’ve created for building applications designed for production.
 
 ## Getting started with `{golem}`
 
