--- a/javascript.Rmd
+++ b/javascript.Rmd
@@ -14,12 +14,14 @@
 
 ## About `{golem}` js functions
 
-`{golem}` comes with a series of JavaScript functions that you can call from the server. These functions are added by default with `golem::activate_js()` in `app_ui`.
+`{golem}` comes with a series of JavaScript functions that you can call from the server. 
+These functions are added by default with `golem::activate_js()` in `app_ui`.
 
 
-Then they are called with `session$sendCustomMessage("function", "ui_element")`.
+Then they are called with `golem::invoke_js("function", "ui_element")`.
 
-This `ui_element` define the UI element to interact with. It can be a full jQuery selector, an id or a class.
+This `ui_element` define the UI element to interact with. 
+It can be a full jQuery selector, an id or a class.
 
 ### `golem::activate_js()`
 
@@ -53,7 +55,8 @@ Note that in html, tags contains attributes. For example:
 <a href = "https://thinkr.fr" data-value = "panel2">ThinkR</a>
 ```
 
-contains `href` & `data-value`. You can refer to these attributes with `[]` after the tag name.
+contains `href` & `data-value`. 
+You can refer to these attributes with `[]` after the tag name.
 
 + `a[href = "https://thinkr.fr"]`: link with `href` being `https://thinkr.fr`
 
