--- a/prototyping-fakir-shinipsum.Rmd
+++ b/prototyping-fakir-shinipsum.Rmd
@@ -1,6 +1,7 @@
 # Tools for prototyping {#proto}
 
-These two tools allow you to prototype a Shiny App and to go "UI first". Learn more: 
+These two tools allow you to prototype a Shiny App and to go "UI first". 
+Learn more: 
 
 ## Fast prototyping with `{shinipsum}`
 
