--- a/secure.Rmd
+++ b/secure.Rmd
@@ -8,6 +8,7 @@ Friends don't let friends work on a coding project without version control.
 
 ## CI and testing
 
-Testing is central for making your application survive in the long run. The {testthat} package can be used to test the "business logic" side of your app, while the application features can be tested with packages like {shinytest}, or software like Katalon. 
+Testing is central for making your application survive in the long run. 
+The {testthat} package can be used to test the "business logic" side of your app, while the application features can be tested with packages like {shinytest}, or software like Katalon. 
 
 // TO DO: more info about the tools + link to resources.
