--- a/step-by-step-design.Rmd
+++ b/step-by-step-design.Rmd
@@ -4,11 +4,15 @@
 
 ## Designing before coding
 
-Don’t rush into coding. I know you want to, because it’s what we like to do and what we are good at. But before entering the coding marathon, take time to think about the application and the way it will be deployed and used. 
+Don’t rush into coding. 
+I know you want to, because it’s what we like to do and what we are good at. 
+But before entering the coding marathon, take time to think about the application and the way it will be deployed and used. 
 
 ## Ask questions
 
-Take a pen and a piece of paper and draw the app. Talk about it with the people who will use the app, just to decipher what they actually need. Take a moment to talk with the IT. Here are some questions you can ask:
+Take a pen and a piece of paper and draw the app. 
+Talk about it with the people who will use the app, just to decipher what they actually need. 
+Take a moment to talk with the IT. Here are some questions you can ask:
 
 + “Who are the end users of the app?” — This will help you know if the end users are tech literate or not, and what they aim to achieve with the app.
 + “How frequently will they use the app?” — The small details of the design & the UI of an app you use on a daily basis is more crucial than when the app is used once a month.
