--- a/index.Rmd
+++ b/index.Rmd
@@ -15,15 +15,21 @@ This book is still at a Work in Progress stage.
 
 ## Motivation {-}
 
-This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. What we'll see is __the process of building the app__. Why? Lots of blog posts and books talk about starting to use shiny or putting apps in production. Very few (if any) talk about this grey area between getting started and pushing into production. 
+This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. 
+What we'll see is __the process of building the app__. 
+Why? Lots of blog posts and books talk about starting to use shiny or putting apps in production. 
+Very few (if any) talk about this grey area between getting started and pushing into production. 
 
-So this is what this book is going to talk about: building Shiny application. We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
+So this is what this book is going to talk about: building Shiny application. 
+We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
 
 Hence, if you're starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
 
 ## Book structure {-}
 
-+ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you're dealing with a large scale application. It also introduces the `{golem}` package and more general concept about organising your workflow. This first part will be light on code: you'll read more about conceptual ideas and organisation strategy. 
++ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you're dealing with a large scale application. 
+It also introduces the `{golem}` package and more general concept about organising your workflow. 
+This first part will be light on code: you'll read more about conceptual ideas and organisation strategy. 
 
 + Part 2 to 6 describes a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.
 
@@ -35,7 +41,8 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 ## Want to help? {-}
 
-Any feedbacks on the book is very welcome. Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
+Any feedbacks on the book is very welcome. 
+Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
 
 ## Other resources {-}
 
