--- a/step-by-step-build.Rmd
+++ b/step-by-step-build.Rmd
@@ -4,7 +4,8 @@
 
 Now the UI and the features are set, time to work on the backend.
 
-This part is pretty standard — everybody can now work on the implementation of the functions that process the app inputs, in their own modules. As the UI, functionalities and modules have been defined in the previous steps, everyone (well, in theory) knows what they have to work on.
+This part is pretty standard — everybody can now work on the implementation of the functions that process the app inputs, in their own modules. 
+As the UI, functionalities and modules have been defined in the previous steps, everyone (well, in theory) knows what they have to work on.
 
 And also, as said before, there should be no "surprise implementation", as the app has been well defined before.
 
@@ -48,7 +49,8 @@ myapp.Rproj
 ```
 
 
-If you're already familiar with R packages, most of these files will appear very familiar to you. That's because a `{golem}` app IS a package.
+If you're already familiar with R packages, most of these files will appear very familiar to you. 
+That's because a `{golem}` app IS a package.
 
 + `DESCRIPTION` & `NAMESPACE`: Package meta-data.
 
@@ -137,7 +139,8 @@ golem::use_utils_server()
 golem::use_favicon( path = "path/to/favicon")
 ```
 
-You're now set! You've successfully initiated the project and can go to dev/02_dev.R.
+You're now set! 
+You've successfully initiated the project and can go to dev/02_dev.R.
 
 ```{r eval = FALSE}
 rstudioapi::navigateToFile("dev/02_dev.R")
@@ -157,7 +160,8 @@ To run the app, go to the `dev/run_dev.R` file, and run the all thing.
 
 ### Add modules
 
-The `golem::add_module()` functions creates a module in the `R` folder. The file and the modules will be named after the `name` parameter, by adding `mod_` to the R file, and `mod_*_ui` and `mod_*_server` to the UI and server functions.
+The `golem::add_module()` functions creates a module in the `R` folder. 
+The file and the modules will be named after the `name` parameter, by adding `mod_` to the R file, and `mod_*_ui` and `mod_*_server` to the UI and server functions.
 
 ```{r eval = FALSE}
 golem::add_module(name = "my_first_module") # Name of the module
@@ -225,7 +229,8 @@ golem::add_css_file("custom")
 
 You can add any external resource (JS, css) into `inst/app/www`. 
 
-Then, You'll need to point to these external resources in `golem_add_external_resources()`. For example, if you've created a CSS file with `golem::add_css_file("custom")`, you can add the file with:
+Then, You'll need to point to these external resources in `golem_add_external_resources()`. 
+For example, if you've created a CSS file with `golem::add_css_file("custom")`, you can add the file with:
 
 ``` r
 tags$link(rel="stylesheet", type="text/css", href="www/custom.css")
@@ -233,7 +238,8 @@ tags$link(rel="stylesheet", type="text/css", href="www/custom.css")
 
 Also, you can list here the use of other packages, for example `useShinyalert()` from the `{shinyalert}` package.
 
-Note: we've chosen to leave it "raw", in the sense that there is a `addResourcePath` and a `tags$head`. If you're comfortable with `{htmltools}`, you can build a `htmltools::htmlDependency`. 
+Note: we've chosen to leave it "raw", in the sense that there is a `addResourcePath` and a `tags$head`. 
+If you're comfortable with `{htmltools}`, you can build a `htmltools::htmlDependency`. 
 
 ## Documentation
 
@@ -254,9 +260,11 @@ usethis::use_coverage()
 
 ## Using `{golem}` dev functions
 
-There's a series of tools to make your app behave differently whether it's in dev or prod mode. Notably, the `app_prod()` and `app_dev()` function tests for `options( "golem.app.prod")` (or return TRUE if this option doesn't exist). 
+There's a series of tools to make your app behave differently whether it's in dev or prod mode. 
+Notably, the `app_prod()` and `app_dev()` function tests for `options( "golem.app.prod")` (or return TRUE if this option doesn't exist). 
 
-Setting this options at the beginning of your dev process allows to make your app behave in a specific way when you are in dev mode. For example, printing message to the console with `cat_dev()`.
+Setting this options at the beginning of your dev process allows to make your app behave in a specific way when you are in dev mode. 
+For example, printing message to the console with `cat_dev()`.
 
 ```{r eval = TRUE}
 options( "golem.app.prod" = TRUE)
