--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -28,11 +28,11 @@ You don't want your app to be one of that. On the other end, if users open your 
 
 `r right_link("KISS principle", "https://en.wikipedia.org/wiki/KISS_principle")`
 
-Deeply rooted in the [Unix Philosophy](http://www.catb.org/~esr/writings/taoup/html/ch01s07.html), the KISS principle, stating that one should "Keep Thing Simple, Stupid", 
+Deeply rooted in the [Unix Philosophy](http://www.catb.org/~esr/writings/taoup/html/ch01s07.html), the KISS principle, for "Keep Thing Simple, Stupid", also known as the "Rule of Least Surprise" or "Principle of Least Astonishment."
 
 > Rule of Least Surprise: In interface design, always do the least surprising thing.
 
-`r right_link("Basics of the Unix Philosophy", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html")`
+`r right_link("Basics of the Unix Philosophy", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#id2878339")`
 
 #### "Don't make me think" 
 
