added Acknowledgments placeholder

--- a/index.Rmd
+++ b/index.Rmd
@@ -60,7 +60,12 @@ Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-
 
 [Suggest a Resource!](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues)
 
+## Acknowledgments {-}
+
+// TODO : 
+
 ```{r echo = FALSE}
+# Some internal funs
 right_link <- function(text, link){
   htmltools::tagList(
     htmltools::singleton(
