--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -13,12 +13,7 @@ But what to do now you want to build a complex Shiny App?
 
 ## What's a complex Shiny App? 
 
-+ Well, first, one that includes several thousand lines of code (R and others). 
-+ It's also one that is potentially developed by several coders, working on the same application at the same time. 
-+ It's an application where scaling matters. 
-+ Maintainability and ease of upgrading are important. 
-+ In many cases, Shiny Apps in production are not used by "tech literate" people. 
-+ People rely on this application for making real-world decisions, with real consequences.
+// TODO
 
 ## What's a successful Shiny App? 
 
