--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -12,10 +12,63 @@ With small and simple Shiny apps, no knowledge of HTML, CSS or JavaScript is req
 
 ## What's a complex Shiny App? 
 
+> Complex software is harder to think about, harder to test, harder to debug, and harder to maintain — and above all, harder to learn and use.
+
+`r right_link("Basics of the Unix Philosophy", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#id2878339")`
+
+
 ### Reaching the cliff of complexity
 
 Things are quite simple when it comes to small prototypes or proof of concepts. 
-But things change when your application reach "the cliff of complexity": when your app is big enough in term of size and in term of functionality so you can not reason about your whole app at once, and you need to rely on tools to handle this complexity.
+But things change when your application reach "the cliff of complexity"
+^[We borrow this term from Charity Major, as heard in _Test in Production with Charity Majors_, [CoRecursive](https://corecursive.com/019-test-in-production-with-charity-majors/)].
+But what is complexity? 
+Getting a clear definition is not an easy task
+^[Ironic right?]
+ as it very depends on who is concerned.
+In the context of engineering Shiny applications, we can think of complexity from two points of view: the complexity as it is seen by the coder, and the complexity as it is seen by the customer / end user
+^[from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"].
++ From the developer point of view. An app is to be considered complex when it is big enough in term of size and functionality so that it makes it impossible to reason about it at once, and you need to rely on tools to handle this complexity.
+This type of complexity is called _implementation complexity_. 
+One of the goal of this book is to present you a methodology and toolings that will help you reduce this form of complexity. 
+For example, we'll talk about a design / prototype / build / secure / deploy, which helps you reduce the complexity of implementing and maintain new app features. 
+We'll also be talking at length about the `{golem}` package, which provides a toolkit for reducing the cognitive load of handling complexity in large Shiny applications. 
+For example, creatign a new Shiny module requires following a very strict structure. 
+One way to do that is to remember how to do that and to code it from scratch (a method which has an important cognitive load and is very error prone). 
+Another way is to copy and paste an existing module and to adapt it, which is, as any copy and paste, likely to lead to errors. 
+Or there is the `{golem}` way, in which you rely on a robust tool to build the foundations for a new module.
+Another benefit of adopting automation for common application component is that it allows to be sure that you're following a convention. 
+And conventions are crucial when it comes to building and maintaining complex system: by imposing a formalized structure for a piece of code, it ehances readability, lessens the learning curve, and lightens the chance for typo and/or copy and paste error. 
++ Customers and users, on the other hand, see complexity as _interface complexity_. 
+Interface complexity can be driven by a lot of elements, with for example the probability of making an error while using the app, difficulty to understand the evolution of the app, unfamiliar behaviour or terms, uncommon forms, visual distraction...
+
+Another measure that sometime comes in the discussion is the codebase size. 
+It's relatively hard to use this number of lines metric, as R is very permissive when it comes to identation and line break. It also depends on your coding style and the packages you're using. For example, tidyverse packages encourage the use of the pipe (`%>%`)
+^[] 
+with one function by line, producing more lines in the end code.
+
+Consider this piece of valid R code:
+
+```{r}
+iris[
+  1
+  :
+    5, 
+  c
+  (
+    "Species"
+  )
+  ]
+```
+
+9 lines of code for something that should also be written in one, three, five...
+
+Another drawback of this metric is that it focuses on numbers instead of readability, and on the long run yes, readability matters
+^["Pressure to keep the codebase size down by using extremely dense and complicated implementation techniques can cause a cascade of implementation complexity in the system, leading to an un-debuggable mess.", from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"]. 
+
+-> Cyclomatic complexity
+
+-> https://github.com/MangoTheCat/cyclocomp 
 
 ### With great complexity comes great responsabilities
 
