various typos and phrasing "I assign the copyright of this contribution to Colin Fay, Vincent Guyader, Cervan Girard and Sébastien Rochette"

--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -8,7 +8,7 @@ French proverb
 
 ### Prepare for success
 
--> Planification is everything 
+-> Planning is everything 
 
 -> Get ready for complexity
 
@@ -23,21 +23,23 @@ Understand the big picture, but implement one small feature at a time.
 
 `r right_link("KISS principle", "https://en.wikipedia.org/wiki/KISS_principle")`
 
-Deeply rooted in the [Unix Philosophy](http://www.catb.org/~esr/writings/taoup/html/ch01s07.html), the KISS principle stands for "Keep Thing Simple, Stupid".
+Deeply rooted in the [Unix Philosophy](http://www.catb.org/~esr/writings/taoup/html/ch01s07.html), the KISS principle stands for "Keep It Simple, Stupid".
 
-The story behind this principle is supposed to be that Kelly Johnson, lead engineer at the Lockheed Skunk Works, gives his workers a set of very common tools and said that the airplanes should be repairable with these tools, and these tools only. 
-The idea behing that being that the action of repairing the aicrafts that come out of their factories should be repairable by the average engineer. 
+The story behind this principle is supposed to be that Kelly Johnson, lead engineer at the Lockheed Skunk Works, gave his workers a set of very common tools and said that the airplanes should be repairable with these tools, and these tools only. 
+The idea behind being, that the action of repairing the aircrafts that come out of their factories should be possible to carry out by the average engineer. 
 
--> Help you reason about the app on the long run 
+KISS will: 
+
+-> Help you reason about the app in the long run, since it is  
 
 -> Hard to remove a feature once it's implemented
 
-### Think long-term maintnenance, now
+### Think long-term maintenance, now
 
-Maintainance, on the other hand, is something to think about from the beginning.  
+Maintenance, on the other hand, is something to think about from the beginning.  
 It includes being able to ensure that the application will work in the long run, and that new features can be easily implemented. 
 
-+ Working in the long run: separate the code with "business logic" (aka the data manipulation and the algorithm, that can work outside the context of the app) from the code building the application. 
++ Working in the long run: separate the code containing the "business logic" (aka the data manipulation and the algorithms, which can work outside the context of the app) from the code building the application. 
 That way, you can write regression tests for these functions to ensure they are stable. 
 + Implement new elements: as we are working with modules, it's easy to insert new elements inside the global application. 
 
@@ -52,13 +54,13 @@ So, how do we organize that?
 
 + Use version control (not sure I have to expand on that topic ;) )
 + Think of your shiny app as a tree, and divide it as much as possible into little pieces. 
-Then, create one Shiny module by piece. 
+Then, create one Shiny module piece by piece. 
 This allows you to split the work, and also to have smaller files — it's easier to work on 20 files of 200 lines than on one big app.R file. 
 
 ### From the organisational point of view
 
- + Define one person in charge of having the big picture of the app. 
- This person will kick off the project, and write the skeleton of the app, with the good modules and files structure. 
+ + Define one person to be in charge of having the big picture of the app. 
+ This person will kick off the project, and write the skeleton of the app, with a good module and files structure. 
  This person will also be in charge of accepting new merge requests from other developers, and to orchestrate the master and dev branches. 
 + List the tasks, and open one issue for each task on your version control system. 
 Each issue will be solved in a separate branch. 
