--- a/deploy-with-golem.Rmd
+++ b/deploy-with-golem.Rmd
@@ -1,8 +1,16 @@
 # Deploy with `{golem}` {#deploy-golem}
 
+
+il est ensentiel de visualiser son application trés régulierement pendant la phase de développement, et si possible dans des conditions identiques à celle de production.
+
+
 ## Local deployment
 
-// TODO
+Une application shiny construite à partir de golem est _par définition_ encapsulée dans un package R. Pour installer votre application sur un poste informatique disposant de R, il vous "suffit" d'installer le package que vous avez construit.
+Depuis Rstudio dans le projet correspondant au golem que vous avez construit l'instruction `remotes::install_local()` se chargera d'installer votre package sur votre poste. Cela correspond à cliquer sur Build > install ans Restart dans l'IDE.
+Pour installer votre pacakge sur un autre poste, d'une maniere plus conventionelle il vous faudra consuitre une version "bundeld". Pour se faire `devtools:build()` generera un fichier au foramt .tar.gzn de la form `mygolem_0.0.1.tar.gz`
+
+
 
 ## Deploying Apps with `{golem}`
 
