--- a/secure.Rmd
+++ b/secure.Rmd
@@ -54,7 +54,7 @@ Git s'intégre trés bien avec l'IDE Rstudio, ainsi, pendant que vous développe
 L'usage de git n'est pas réservé aux applications qui s'écrivent à plus de deux mains, et a partir de une personne utiliser git est une bonne idée et fait partie des bonnes pratiques.
 
 
-développer une application shiny, c'est avant tout développer une application. quelque soit le langage des outils dédié à cela existe, git en fait parti. Et ce n'est pas parce q'uil s'agit de R, qu'il ne faut pas utiliser ces outils.
+développer une application shiny, c'est avant tout développer une application. quelque soit le langage des outils dédiés à cela existent, git en fait parti. Et ce n'est pas parce q'uil s'agit de R, qu'il ne faut pas utiliser ces outils.
 
 
 
