--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -96,7 +96,7 @@ Another drawback of this metric is that it focuses on numbers instead of readabi
 ### With great complexity comes great responsabilities
 
 When your program reaches this state, there is a lot of potential for failure, be it from a developer perspective or from a user point of view. For the code, bugs are harder to anticipate: it's hard to think about all the different path the software can follow, it's hard to detect bug because they are deeply nested in the numerous routines the app is doing. 
-It's also hard to think about what the state of your at a given moment in time because of the numerous inputs and output your app contains. 
+It's also hard to think about what the state of your app at a given moment in time because of the numerous inputs and output your app contains. 
 From the user perspective, the more complex an app, the more important the learning curve is. 
 Which means that the user will have to invest time learning how the app works, and will be even more disappointed if ever they realise this time has been a waste. 
 
@@ -109,7 +109,7 @@ And this is not necessarily a bad thing.
 Shiny apps can definitely be used to implement a production-grade
 ^[By production-grade, we mean a software that can be used in a context where people use it for doing their job, and where failures or bug have real-life consequences] 
 software, but production-grade software implies production-grade software engineering. 
-And your goal to make this project a succes is be to prepared, to use tool that will reduce the complexity of your app, and ensure that your app has the quality to age well. 
+And your goal to make this project a succes is be to prepared, to use tools that will reduce the complexity of your app, and ensure that your app has the quality to age well. 
 
 In other words, production-grade Shiny apps require to work with a software engineering mindset. 
 Which is not always that easy a task in the R world. 
