--- a/golem.Rmd
+++ b/golem.Rmd
@@ -160,7 +160,7 @@ Very technically speaking, it's the `print()` from the object outputted by `run_
 The body of this function is wrapped inside `with_golem_options()`, which allows you to pass arguments to the `run_app()` function, which will later be callable with `golem::get_golem_options()`. 
 Some example of passing arguments include `run_app(prod = FALSE)` or something in the like of `run_app(user = "admin)`.
 
-#### `inst/app/www/`
+### `inst/app/www/`
 
 The `inst/app/www/` folder contains all the files which are gonna be made available __at application run time__. 
 Any web application has external files that allows it to run^[
@@ -181,7 +181,7 @@ Be aware that these files are available under the `www/` at __application run ti
 In other words, you can use the `www` prefix in the HTML generated in your UI, which is read by your browser, not from the R/server side. 
 If you want to link to a file that is read during __application generation__, you'll need to do, for example, `includeMarkdown( system.file("app/www/plop.md", package = "golex") )`. 
 
-#### `man/`
+### `man/`
 
 This `man/` folder includes the package documentation. 
 It's a common folder that is automatically filled when you document your app: notably when running the `dev/run_dev.R` script and the `document_and_reload()` function.
